#16: Update MSR Core dependency to v0.8.1

--- a/docs/version-migration/v0.1-to-v0.2.md
+++ b/docs/version-migration/v0.1-to-v0.2.md
@@ -21,12 +21,12 @@ Guide for upgrading from v0.1.x to v0.2.0 of Firebase Migration Script Runner.
 
 ## Overview
 
-v0.2.0 is a major upgrade that brings production-ready features and aligns with the MSR Core v0.8.0 ecosystem. This release contains **one breaking change** (package name) and introduces powerful new features for distributed deployments.
+v0.2.0 is a major upgrade that brings production-ready features and aligns with the MSR Core v0.8.1 ecosystem. This release contains **one breaking change** (package name) and introduces powerful new features for distributed deployments.
 
 ### What's New in v0.2.0
 
 - 🔒 **Migration Locking** - Prevent concurrent migrations in Kubernetes, Docker, and multi-instance deployments
-- ⬆️ **MSR Core v0.8.0** - Latest core with bug fixes and improvements
+- ⬆️ **MSR Core v0.8.1** - Latest core with bug fixes, handler access API, and improved locking lifecycle
 - 🔧 **Type-Safe API** - Full TypeScript support with generic type parameters
 - 🖥️ **Lock Management CLI** - Commands for monitoring and managing migration locks
 - 📚 **Comprehensive Documentation** - 300+ line locking guide with deployment examples
