#22: Rename AppConfig to FirebaseConfig
AppConfig was too generic. FirebaseConfig is more descriptive and consistent
with FirebaseRunner, FirebaseHandler, and other Firebase-specific classes.

- Renamed class and file: AppConfig → FirebaseConfig
- Updated all imports across src/, test/, and docs/

--- a/docs/version-migration/v0.1-to-v0.2.md
+++ b/docs/version-migration/v0.1-to-v0.2.md
@@ -147,12 +147,12 @@ export const up = async (db: admin.database.Database) => {
 
 **BEFORE:**
 ```typescript
-import { FirebaseRunner, AppConfig } from 'msr-firebase';
+import { FirebaseRunner, FirebaseConfig } from 'msr-firebase';
 ```
 
 **AFTER:**
 ```typescript
-import { FirebaseRunner, AppConfig } from '@migration-script-runner/firebase';
+import { FirebaseRunner, FirebaseConfig } from '@migration-script-runner/firebase';
 ```
 
 ### Step 4: Update CLI Usage (if applicable)
@@ -260,10 +260,10 @@ export const down = async (db: admin.database.Database) => {
 **BEFORE (v0.1.x):**
 ```typescript
 // src/migrate.ts
-import { FirebaseHandler, FirebaseRunner, AppConfig } from 'msr-firebase';
+import { FirebaseHandler, FirebaseRunner, FirebaseConfig } from 'msr-firebase';
 
 async function runMigrations() {
-  const config = new AppConfig();
+  const config = new FirebaseConfig();
   config.folder = './migrations';
   config.tableName = 'schema_version';
   config.databaseUrl = process.env.FIREBASE_DATABASE_URL;
@@ -281,10 +281,10 @@ runMigrations().catch(console.error);
 **AFTER (v0.2.0):**
 ```typescript
 // src/migrate.ts
-import { FirebaseHandler, FirebaseRunner, AppConfig } from '@migration-script-runner/firebase';
+import { FirebaseHandler, FirebaseRunner, FirebaseConfig } from '@migration-script-runner/firebase';
 
 async function runMigrations() {
-  const config = new AppConfig();
+  const config = new FirebaseConfig();
   config.folder = './migrations';
   config.tableName = 'schema_version';
   config.databaseUrl = process.env.FIREBASE_DATABASE_URL;
